@@ -232,6 +232,7 @@ typedef struct _SLPDDatabaseEntry
     char*               langtag;
     int                 langtaglen;
     int                 lifetime;
+    int                 islocal;
     int                 urllen;
     char*               url;
     int                 scopelistlen;
@@ -319,12 +320,16 @@ int SLPDDatabaseEnum(void** handle,
 
 /*=========================================================================*/
 int SLPDDatabaseReg(SLPSrvReg* srvreg,
-                    int fresh);
+                    int fresh,
+                    int islocal);
 /* Add a service registration to the database                              */
 /*                                                                         */
 /* srvreg   -   (IN) pointer to the SLPSrvReg to be added to the database  */
 /*                                                                         */
 /* fresh    -   (IN) pass in nonzero if the registration is fresh.         */
+/*                                                                         */
+/* islocal -    (IN) pass in nonzero if the registration is local to this  */
+/*              machine                                                    */
 /*                                                                         */
 /* Returns  -   Zero on success.  non-zero on error                        */
 /*                                                                         */
