@@ -380,11 +380,6 @@ void SLPDKnownDARegisterAll(SLPDAEntry* daentry)
                     {
                         sock->state = STREAM_WRITE_FIRST;
                     }
-
-                    /*-------------------*/
-                    /* Log trace message */
-                    /*-------------------*/
-                    SLPDLogTraceMsg("OUT",&sock->peeraddr,buf);
                 }
             }
         }
@@ -489,11 +484,6 @@ void SLPDKnownDADeregisterAll(SLPDAEntry* daentry)
                 {
                     sock->state = STREAM_WRITE_FIRST;
                 }
-
-                /*-------------------*/
-                /* Log trace message */
-                /*-------------------*/
-                SLPDLogTraceMsg("OUT",&sock->peeraddr,buf);
             }
         }
     }
@@ -754,7 +744,12 @@ void SLPDKnownDAEcho(struct sockaddr_in* peeraddr,
     const char* msgscope;
     int         msgscopelen;
     
-    /* TODO: make sure that we do not echo to ourselves */
+    /* Do not echo registrations if we are a DA unless they were made  */
+    /* local through the API!                                          */
+    if(G_SlpdProperty.isDA && !ISLOCAL(peeraddr->sin_addr))
+    {
+        return;
+    }
     
     if(msg->header.functionid == SLP_FUNCT_SRVREG)
     {
@@ -797,11 +792,6 @@ void SLPDKnownDAEcho(struct sockaddr_in* peeraddr,
                     {
                         sock->state = STREAM_WRITE_FIRST;
                     }
-                    
-                    /*-------------------*/
-                    /* Log trace message */
-                    /*-------------------*/
-                    SLPDLogTraceMsg("OUT",&sock->peeraddr,buf);
                 }
             }
         }
@@ -858,11 +848,6 @@ void SLPDKnownDAActiveDiscovery(int seconds)
             /*----------------------------------------------------------*/
             MakeActiveDiscoveryRqst(1,&(sock->sendbuf));
             SLPDOutgoingDatagramWrite(sock); 
-            
-            /*-------------------*/
-            /* Log trace message */
-            /*-------------------*/
-            SLPDLogTraceMsg("OUT",&sock->peeraddr,sock->sendbuf);
         }
     } 
     else
@@ -933,10 +918,6 @@ void SLPDKnownDAPassiveDAAdvert(int seconds)
                                           &(sock->sendbuf)) == 0)
             {
                 SLPDOutgoingDatagramWrite(sock);
-                /*-------------------*/
-                /* Log trace message */
-                /*-------------------*/
-                SLPDLogTraceMsg("OUT",&sock->peeraddr,sock->sendbuf);
             }
         }
     }
