@@ -6,6 +6,10 @@ Please make entries to this log (in addition to the CVS log) that describe
 major changes to the OpenSLP code base.  An entries should be separated by
 blank lines and include the date, developer's email, and change description.
 =============================================================================
+11/21/00 mpeterson@caldera.com
+DAs now echo local registrations to other DAs (slpd as a DA also acts like
+an SA for local API callers)
+
 11/20/00 mpeterson@caldera.com
 Added code to ensure we respond correctly (with AUTHENICATION_UNKNONW) when\
 a request with a SPI is received
